<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">JSONWeatherApp</string>
    <string name="action_settings">Settings</string>
    
    <string name="button_location">Location</string>
    <string name="location_editText_hint">Enter Location</string>
    <string name="weather_button">Weather</string>
    <string name="country_textView">Country</string>
    <string name="country_editText">Country Name</string>
    <string name="temperature_textView">Temperature</string>
    <string name="temperature_editText">Temperature</string>

</resources>
